[gd_scene load_steps=3 format=1]

[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OpenSans.fnt" type="Font" id=2]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="Label" type="Label" parent="."]

margin/right = 40.0
margin/bottom = 13.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "Pepper & Carrot"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ButtonContainer" type="VBoxContainer" parent="."]

margin/left = 88.0
margin/top = 176.0
margin/right = 369.0
margin/bottom = 296.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0

[node name="play_button" type="Button" parent="ButtonContainer"]

margin/right = 281.0
margin/bottom = 19.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Play"
flat = false

[node name="disable_debug_button" type="Button" parent="ButtonContainer"]

margin/top = 23.0
margin/right = 281.0
margin/bottom = 42.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Disable Debug"
flat = false

[node name="options_button" type="Button" parent="ButtonContainer"]

margin/top = 46.0
margin/right = 281.0
margin/bottom = 65.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Options"
flat = false

[node name="exit_button" type="Button" parent="ButtonContainer"]

margin/top = 69.0
margin/right = 281.0
margin/bottom = 88.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Exit"
flat = false

[connection signal="pressed" from="ButtonContainer/disable_debug_button" to="." method="_on_disable_debug_button_pressed"]

[connection signal="pressed" from="ButtonContainer/options_button" to="." method="_on_options_button_pressed"]

[connection signal="pressed" from="ButtonContainer/exit_button" to="." method="_on_exit_button_pressed"]


